--- a/css/responsive.css
+++ b/css/responsive.css
@@ -57,3 +57,10 @@
          column-count: 1;
     }
 }
+@media only screen and (max-width: 700px){
+  #navbar nav a {
+    display:none;
+  }
+  
+  
+}
