--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,6 +60,8 @@
 @media only screen and (max-width: 700px){
   #navbar nav a {
     display:none;
+    float:right;
+    
   }
   #navbar nav a.menu-icon{
     display:block;
