--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,12 +60,13 @@
 @media only screen and (max-width: 700px){
   #navbar nav a {
     display:none;
-    float:right;
-    font-size:1.5em;
+   
   }
   #navbar nav a.menu-icon{
     display:block;
-    
+     float:right;
+    font-size:1.5em;
+    padding:10px 20px;
   }
   
 }
